common-applications/test-environment/mindspore-website/website/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: mindspore-website2
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: website
  type: ClusterIP
