common-applications/test-environment/mindspore-website/website/website-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Content-Type-Options "nosniff";
      add_header X-XSS-Protection "1; mode=block";
      add_header Strict-Transport-Security "max-age=31536000;includeSubDomains";
      add_header X-Frame-Options "DENY";
      add_header Content-Security-Policy "script-src 'self' *.baidu.com ers.baidu.com 'unsafe-inline' 'unsafe-eval' cdn.bootcss.com https://cdn.mathjax.org; object-src 'none'; frame-ancestors https://www.bilibili.com";
  name: website-ingress
  namespace: mindspore-website2
spec:
  rules:
  - host: mindspore-website2.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy-admin
          servicePort: 4180
        path: /
  tls:
  - hosts:
    - mindspore-website2.test.osinfra.cn
    secretName: website-tls

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/upstream-vhost: dsapi.osinfra.cn
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  name: website-dsapi-ingress
  namespace: mindspore-website2
spec:
  rules:
  - host: mindspore-website2.test.osinfra.cn
    http:
      paths:
      - paths:
        backend:
          serviceName: dsapi-service
          servicePort: 443
        path: /api-dsapi/(.*)
  tls:
  - hosts:
    - mindspore-website2.test.osinfra.cn
    secretName: website-tls

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/upstream-vhost: doc-search.mindspore.cn
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  name: website-search-ingress
  namespace: mindspore-website2
spec:
  rules:
  - host: mindspore-website2.test.osinfra.cn
    http:
      paths:
      - paths:
        backend:
          serviceName: search-service
          servicePort: 443
        path: /api-search/(.*)
  tls:
  - hosts:
    - mindspore-website2.test.osinfra.cn
    secretName: website-tls
